Release 5.0.11 (Unreleased)
===========================

Bug fixes
---------

- Avoid possible crash with some Fortran compilers in wall boundary
  condition code when the transient turbomachinery model is not active.

- Fix restart of time moments defined by starting physical time.

- GUI: fix reading of reconstruction flux option for pressure and hydraulic
  head. It was not possible to disable flux reconstruction using the GUI for
  these variables.

- Run script: fix overwriting of preprocessing mesh orientation output
  in case of multiple input meshes (Mantis issue #226).

Architectural changes
---------------------

- Fix compilation with gcc 9 and OpenMP support enabled.

- Shared library numbering for libsaturne.so now set to 5.0 to avoid confusion
  with other versions of the 5.x series.

Release 5.0.10 (May 6 2019)
===========================

Bug fixes
---------

- Lagrangian module: fix crash in coal or biomass evolution model.

- Lagrangian module with deposition: fix use of wrong Eulerian
  fluid velocity in some terms.

- Fix in ALE wall BCs.

- GUI reader: fix for cases with multiple mapped inlets.

- Work around possible Intel icc compiler bug in least-squares vector
  gradient (observed on v6.0 with icc 18.0.1 20171018).

- Avoid opening residuals.csv from all ranks.

- Fix for time moment which start is defined by a time value equal or close to
  a time step value.

- Fix memory leaks in parameters check.

- Fix in GUI for gas combustion model. Use variable name instead of label to get
  numerical scheme.

- Fix in GUI of turbulence model view initalization by moving out of
  turbulence model slot the view initalization code.

- Fix in TVD convective schemes (parallel mode).

- Fix crash when using multiple GUI-defined scalar balance zones.

- Fix memory leak leading to crash in legacy porosity model.

- CFDSTUDY (Salome): fix issues with dissapearing windows onserved on
  some actual systems such as Debian 9 and Ubuntu 16.04.
